--- a/my-webpack-app/package.json
+++ b/my-webpack-app/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack serve --open"
+    "build": "webpack --config webpack.production.js",
+    "start": "webpack serve --open --config webpack.development.js"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
@@ -16,7 +16,8 @@
     "style-loader": "^3.3.4",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   },
   "dependencies": {
     "date-fns": "^3.3.1"
